--- a/css/style.css
+++ b/css/style.css
@@ -209,6 +209,27 @@ nav a:hover{text-decoration: none; color: rgb(213, 231, 213);}
 /* banner */
 .banner{position: relative;top: 85px; background-color: rgba(172, 121, 240, 0.567);overflow: hidden; z-index: 100;}
 .banner img{width: 100%;height: 250px;}
+#seller-shop-banner{
+    position: relative;
+    top: 85px;
+    height: 300px;
+    width: 70%;
+    margin: 0 auto;
+    background-image:
+    linear-gradient(
+      rgba(0, 0, 0, 0.5),
+      rgba(0, 0, 0, 0.5)
+    ), 
+    url('../images/pic.jpg');
+    background-repeat: no-repeat;
+    background-size: 100% 80%;
+    text-align: center;
+    padding: 70px 0 0 0;
+}
+#seller-shop-banner h1{
+    color: rgb(206, 206, 206);
+    font-weight: 700;
+}
 /* categories */
 .categories{
     width: 100%;
@@ -466,8 +487,10 @@ box-shadow: 0 0 10px rgba(0,0,0, .65);}
 #single-product .row .col-6 .row h6{margin: 10px;}
 #single-product .row .col-6 img{height: 490px;width: 70%;margin: 10px;}
 .mobile-single-product{display: none;}
-.seller-shop{position: relative; top: 80px;}
+.seller-shop{position: relative; top: 10px;}
 .seller-shop .seller-details{text-align: center;}
+#go-to-shop{margin-left: 600px; color: rgb(218, 243, 243);}
+#client-shop{position: relative;top: 100px;}
 /* //shop */
 /* testimonial */
 .testimonial1{position: relative;top: 75px; height: 250px;background-color: rgb(201, 202, 201);}
@@ -867,9 +890,9 @@ box-shadow: 0 0 10px rgba(0,0,0, .65);}
 /* Mobile view */
 @media only screen and (min-width:320px) and (max-width: 480px){
     header{height: 60px;}
-    .logo{position: absolute;margin: 2px 0 0 35px;}
-    .logo img{width: 42px; height: 27px;}
-    .search{position: absolute;top: 25px;margin: 5px 0 0 -70px;}
+    .logo{position: absolute;margin: 2px 0 0 40px;}
+    .logo img{width: 62px; height: 27px;}
+    .search{position: absolute;top: 25px;margin: 5px 0 0 -60px;}
     .search input{width: 315px;height: 25px; font-size: 10px; border: 1px solid rgb(189, 190, 189); border-right: none;}
     .search button{position: absolute;left: 315px; height: 25px; width: 35px; font-size: 10px; margin: 4px 0 0 0;border: 1px solid rgb(189, 190, 189);
     border-left: none;padding-top: 5px;}
@@ -974,7 +997,7 @@ box-shadow: 0 0 10px rgba(0,0,0, .65);}
     .wishlist a .wishlist-icon{font-size: 15px;}
     .wishlist a span{width: 10px;height: 12px;margin: 0px 4px;font-size: 12px;}
     .wishlist a span .value{margin: -5px 0 0 0;}
-    #sell-on-madefru{position: relative; right: 15px;}
+    #sell-on-madefru{position: absolute; right: 45px;}
     #sell-on-madefru a{width: 40px;height: 20px;padding: 0;}
     #sell-on-madefru .sell-on-madefru-icon{font-size: 12px;}
     .desktop-nav{position: absolute;visibility: hidden;}
@@ -1074,6 +1097,15 @@ box-shadow: 0 0 10px rgba(0,0,0, .65);}
         }
         .seller-shop .heading{
             margin-left: -70px;
+        }
+        #seller-shop-banner{
+            top: 70px;
+            width: 100%;
+            height: 150px;
+            padding: 20px 10px;
+        }
+        #seller-shop-banner h1{
+            font-size: 25px;
         }
     /* //seller-shop */
     #single-product{display: none;}
