--- a/seller/css/style.css
+++ b/seller/css/style.css
@@ -127,10 +127,57 @@ body h1, h2, h3, h4, h5, h6{ padding:0; margin:0; }
 
 /* //why sell */
 /* how to sell */
-    #how-to-sell img{
-        width: 60%;
-        height: 400px;
-        margin-left: 260px;
+    #how-to-sell{
+        position: relative;
+        top: 20px;
+    }
+    .feature-section
+    {
+        width: 100%;
+    }
+
+    .feature-section .features-inner
+    {
+        display: flex;
+        padding: 10px 0px;
+        box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.1);
+    }
+
+    .feature-section .features-box
+    {
+        flex: 0 0 33.33%;
+        max-width: 33.33%;
+        text-align: center;
+        border-right: 2px solid #9e9e9e;
+    }
+
+    .feature-section .features-box:nth-child(3)
+    {
+        border-right: none;
+    }
+
+    .feature-section .icon img
+    {
+        width: 45px;
+        height: auto;
+    }
+
+    .feature-section .features-box h1
+    {
+        font-size: 16px;
+        margin-bottom: 5px;
+    }
+
+    .feature-section .note
+    {
+        text-align: center;
+        color: #5fb709;
+    }
+
+    .feature-section .head
+    {
+        text-align: center;
+        color: #5fb709;
     }
 /* //how to sell */
 /* contact us */
@@ -222,7 +269,7 @@ body h1, h2, h3, h4, h5, h6{ padding:0; margin:0; }
 
     /* open shop */
     #open-shop{position: relative;top: 55px; height: auto; padding-bottom: 25px;}
-    #open-shop .banner{position: relative; top: 0; left: 0; width: 100%;height: 200px;}
+    #open-shop .banner{position: relative; top: 0; left: 0; width: 100%;height: 200px; z-index: 100;}
     #open-shop .banner img{height: 200px;}
     #open-shop .text{position: relative;top: -50px;left: 5px;text-shadow: 0 0 5px rgb(46, 45, 45); width: 35%;}
     #open-shop .text h3{position: relative; font-size: 14px;}
@@ -256,11 +303,13 @@ body h1, h2, h3, h4, h5, h6{ padding:0; margin:0; }
     }
 /* //why sell */
 /* how to sell */
-    #how-to-sell img{
-        width: 97%;
-        height: 200px;
-        margin: 5px;
+    #how-to-sell{
+        top: 0;
     }
+    #how-to-sell .head h1{
+        font-size: 22px;
+    }
+    
 /* //how to sell */
 
 /* contact us */
