--- a/css/style.css
+++ b/css/style.css
@@ -2462,6 +2462,13 @@ nav a:hover{text-decoration: none; color: rgb(213, 231, 213);}
     }
 
     .feature-section{top: 60px;}
+    .feature-section h1{
+        font-size: 10px;
+    }
+    .feature-section p{
+        padding: 5px;
+        font-size: 10px;
+    }
 
     .categories {
         margin-top: 65px;
